# walkpad-sync

./: .gitignore  ACTION_PLAN.md  APP_OVERVIEW.md  CODE_REVIEW.md  GETTING_STARTED.md  IMPROVEMENTS.md  LICENSE  PRIVACY.md  PROJECT_STRUCTURE.md  README.md  SIMPLE_VERSION.md  VISION.md  XCODE_SETUP.md  add_files_to_xcode.sh  docker-compose.yml  verify_files.sh
.github/workflows/: ios.yml  rust.yml
TreadmillSync/: Info.plist  PrivacyInfo.xcprivacy  SimpleInfo.plist  SimpleTreadmillSyncApp.swift  TreadmillSyncApp.swift
TreadmillSync.xcodeproj/: project.pbxproj
TreadmillSync/Managers/: BLEDataParser.swift  DailySessionManager.swift  HealthKitManager.swift  SimpleTreadmillSync.swift  (+2 more)
WalkPadSync.xcodeproj/: project.pbxproj
demo-server/: worker-active.js  worker-complete.js  worker-empty.js  worker-history.js  worker.js  wrangler-active.toml  wrangler-complete.toml  wrangler-empty.toml  wrangler-history.toml  wrangler.toml
ios/: Info.plist  TreadmillSyncApp.swift  WalkPadSyncApp.swift
server/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  walkpad-server.service
server/src/: config.rs  main.rs  websocket.rs
server/src/api/: mod.rs
server/src/bluetooth/: mod.rs
server/src/storage/: mod.rs
treadmill-sync/: Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml  migrate_to_v2.sql  schema.sql  schema_v2.sql  treadmill-sync.service
treadmill-sync/migrations/: 001_add_heart_rate_incline.sql  README.md
treadmill-sync/src/: config.rs  main.rs  websocket.rs
treadmill-sync/src/api/: mod.rs  websocket.rs
treadmill-sync/src/bluetooth/: ftms.rs  mod.rs  protocol.rs
treadmill-sync/src/storage/: mod.rs
treadmill-sync/static/: dashboard.html
(+42 files in other folders)
